Fix subnavigation dropdown z-index

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -749,6 +749,7 @@ body > header,
     background: #fff;
     min-width: rem-calc(240);
     width: max-content;
+    z-index: 10;
 
     li {
       display: block;
